--- a/client/src/app/site/pages/meetings/modules/projector/components/slide-container/slide-container.component.scss
+++ b/client/src/app/site/pages/meetings/modules/projector/components/slide-container/slide-container.component.scss
@@ -1,4 +1,5 @@
-#slide {
+#slideOne,
+#slideTwo {
     width: 100%;
     height: 100%;
 
@@ -9,7 +10,4 @@
         top: 40px;
         line-height: 1.5;
     }
-}
-#slide {
-    height: 100%;
 }
